# master_thesis

./: CMakeLists.txt  Readme.md  package.xml
FactorGraphRadarInertialOdometry/: CMakeLists.txt  Readme.md  config.json
FactorGraphRadarInertialOdometry/apps/: CMakeLists.txt
FactorGraphRadarInertialOdometry/apps/offline_odometry/: FactorGraph_FixedRate_Odometry.cpp  FactorGraph_GT_eval_odometry.cpp  FactorGraph_Odometry.cpp  FactorGraph_Odometry_radar_only_keyframe.cpp  Radar_Registration.cpp  Velocity_Estimator.cpp  delta_yaw_estimator.cpp  gt_aided_fgrio.cpp
FactorGraphRadarInertialOdometry/apps/single_frame_test/: Main.cpp
FactorGraphRadarInertialOdometry/eval_scripts/: automate_evo_evaluation.py  automate_trajectory_evaluation.py  evaluate_comprehensive.py  evaluate_frontend.py  generate_global_map.py  plot_3d_trajectory.py  plot_ablation_details.py  plot_icp_evaluation.py  plot_orientation.py  plot_trajectory.py
FactorGraphRadarInertialOdometry/factor_graph_optimization/: CMakeLists.txt
FactorGraphRadarInertialOdometry/factor_graph_optimization/include/factor_graph_optimization/: DeltaYawFactor.h  GraphOptimizer.h  RadarVelocityFactor.h
FactorGraphRadarInertialOdometry/factor_graph_optimization/src/: GraphOptimizer.cpp
FactorGraphRadarInertialOdometry/radar_common/: CMakeLists.txt
FactorGraphRadarInertialOdometry/radar_common/include/radar_common/: SystemConfig.h  Types.h  Utils.h
FactorGraphRadarInertialOdometry/radar_common/src/: Utils.cpp
FactorGraphRadarInertialOdometry/radar_registration/: CMakeLists.txt
FactorGraphRadarInertialOdometry/radar_registration/include/radar_registration/: RadarICP.h  kdTreeAdaptor.h
FactorGraphRadarInertialOdometry/radar_registration/src/: RadarICP.cpp
FactorGraphRadarInertialOdometry/radar_velocity_estimation/: CMakeLists.txt
FactorGraphRadarInertialOdometry/radar_velocity_estimation/include/radar_velocity_estimation/: BodyFrameCorrector.h  Estimator.h
FactorGraphRadarInertialOdometry/radar_velocity_estimation/src/: BodyFrameCorrector.cpp  Estimator.cpp
RadarVelocityEstimator/: CMakeLists.txt
RadarVelocityEstimator/include/: BodyFrameCorrector.h  Estimator.h  Types.h
RadarVelocityEstimator/src/: BodyFrameCorrector.cpp  Estimator.cpp  Main.cpp
config/: config.yaml
gaussian_clustering/: package.xml
gaussian_clustering/config/: config.yaml
gaussian_clustering/include/master_thesis/: dbscan.hpp  helperfunctions.hpp
gaussian_clustering/launch/: clustering_launch.py
gaussian_clustering/src/: clustering.cpp
include/master_thesis/: datastructure.hpp  dbscan.hpp  helperfunctions.hpp
radarscenes_ros2/: package.xml  setup.cfg  setup.py
radarscenes_ros2/radarscenes_ros2/: backup.py  publish_data.py  publish_images.py  temp.py
src/: clustering.cpp  helperfunctions.cpp
thesis_proposal/: proposal.aux  proposal.bbl  proposal.blg  proposal.out  proposal.tex  references.bib
